<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="43dp"
    android:background="@color/default_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.HomeFragment">

    <LinearLayout
        android:id="@+id/llNameHomeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_name"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/default_font"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_selamat_datang"
            android:textSize="10sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/default_font"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/llNameHomeFragment"
        app:layout_constraintHorizontal_bias="1"
        android:src="@drawable/dummy_image"
        />
    <LinearLayout
        android:id="@+id/llForSearchAndFilterFragmentHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llNameHomeFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintVertical_bias="0"
        tools:ignore="UselessLeaf">
        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/background_search_view"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/cari_catatan"
            android:fontFamily="@font/poppins_medium"
            android:textColorHint="@color/line_stroke"
            android:textSize="12sp"
            android:drawableEnd="@drawable/ic_icon_search"
            tools:ignore="Autofill,TextFields" />

        <ImageView
            android:id="@+id/ivFilterIconFragmentHome"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:padding="7dp"
            android:background="@drawable/bg_filter_icon"
            android:src="@drawable/filter_icon"
            android:layout_gravity="center_vertical"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBannerTutorialFragmentHome"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/llForSearchAndFilterFragmentHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_banner_fragment_home"
        android:elevation="3dp"
        >
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:text="@string/selamat_datang_di_jekpi"
            android:maxLines="2"
            android:minLines="2"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"
            />
        <LinearLayout
            android:id="@+id/llBtnSelamatDatangFragmentHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintHorizontal_bias="0"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_imageview_button_filled"
                android:text="@string/tutorial"
                android:gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:background="@drawable/bg_imageview_button_outline"
                android:text="@string/abaikan"
                android:gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/brand_primary"
                android:textSize="12sp"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/illustration_home_selamat_datang"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/llBtnSelamatDatangFragmentHome"
            app:layout_constraintHorizontal_bias="1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/llForStringAndIconMoreFragmentHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clBannerTutorialFragmentHome"
        android:layout_marginTop="25dp"
        >
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/semua_catatan"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            />
        <ImageView
            android:id="@+id/ivMoreFragmentHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvForContentFragmentHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/llForStringAndIconMoreFragmentHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:listitem="@layout/card_content"
        />

</androidx.constraintlayout.widget.ConstraintLayout>